crates/escalier_old_parser/src/snapshots/escalier_old_parser__tests__object_types-4.snap
---
source: crates/escalier_old_parser/src/lib.rs
expression: "parse(\"type Baz<T> = {-mut [P in keyof T]-?: T[P]};\")"
---
Ok(
    Program {
        body: [
            Statement {
                loc: SourceLocation {
                    start: Position {
                        line: 0,
                        column: 0,
                    },
                    end: Position {
                        line: 0,
                        column: 44,
                    },
                },
                span: 0..44,
                kind: TypeDecl(
                    TypeDecl {
                        declare: false,
                        id: Ident {
                            loc: SourceLocation {
                                start: Position {
                                    line: 0,
                                    column: 5,
                                },
                                end: Position {
                                    line: 0,
                                    column: 8,
                                },
                            },
                            span: 5..8,
                            name: "Baz",
                        },
                        type_ann: TypeAnn {
                            kind: Mapped(
                                MappedType {
                                    type_param: TypeParam {
                                        span: 21..33,
                                        name: Ident {
                                            loc: SourceLocation {
                                                start: Position {
                                                    line: 0,
                                                    column: 21,
                                                },
                                                end: Position {
                                                    line: 0,
                                                    column: 22,
                                                },
                                            },
                                            span: 21..22,
                                            name: "P",
                                        },
                                        constraint: Some(
                                            TypeAnn {
                                                kind: KeyOf(
                                                    KeyOfType {
                                                        type_ann: TypeAnn {
                                                            kind: TypeRef(
                                                                TypeRef {
                                                                    name: "T",
                                                                    type_args: None,
                                                                },
                                                            ),
                                                            loc: SourceLocation {
                                                                start: Position {
                                                                    line: 0,
                                                                    column: 32,
                                                                },
                                                                end: Position {
                                                                    line: 0,
                                                                    column: 33,
                                                                },
                                                            },
                                                            span: 32..33,
                                                            inferred_type: None,
                                                        },
                                                    },
                                                ),
                                                loc: SourceLocation {
                                                    start: Position {
                                                        line: 0,
                                                        column: 26,
                                                    },
                                                    end: Position {
                                                        line: 0,
                                                        column: 33,
                                                    },
                                                },
                                                span: 26..33,
                                                inferred_type: None,
                                            },
                                        ),
                                        default: None,
                                    },
                                    optional: Some(
                                        TMappedTypeChange {
                                            span: 35..36,
                                            change: Minus,
                                        },
                                    ),
                                    mutable: Some(
                                        TMappedTypeChange {
                                            span: 16..19,
                                            change: Minus,
                                        },
                                    ),
                                    type_ann: TypeAnn {
                                        kind: IndexedAccess(
                                            IndexedAccessType {
                                                obj_type: TypeAnn {
                                                    kind: TypeRef(
                                                        TypeRef {
                                                            name: "T",
                                                            type_args: None,
                                                        },
                                                    ),
                                                    loc: SourceLocation {
                                                        start: Position {
                                                            line: 0,
                                                            column: 38,
                                                        },
                                                        end: Position {
                                                            line: 0,
                                                            column: 39,
                                                        },
                                                    },
                                                    span: 38..39,
                                                    inferred_type: None,
                                                },
                                                index_type: TypeAnn {
                                                    kind: TypeRef(
                                                        TypeRef {
                                                            name: "P",
                                                            type_args: None,
                                                        },
                                                    ),
                                                    loc: SourceLocation {
                                                        start: Position {
                                                            line: 0,
                                                            column: 40,
                                                        },
                                                        end: Position {
                                                            line: 0,
                                                            column: 41,
                                                        },
                                                    },
                                                    span: 40..41,
                                                    inferred_type: None,
                                                },
                                            },
                                        ),
                                        loc: SourceLocation {
                                            start: Position {
                                                line: 0,
                                                column: 38,
                                            },
                                            end: Position {
                                                line: 0,
                                                column: 42,
                                            },
                                        },
                                        span: 38..42,
                                        inferred_type: None,
                                    },
                                },
                            ),
                            loc: SourceLocation {
                                start: Position {
                                    line: 0,
                                    column: 14,
                                },
                                end: Position {
                                    line: 0,
                                    column: 43,
                                },
                            },
                            span: 14..43,
                            inferred_type: None,
                        },
                        type_params: Some(
                            [
                                TypeParam {
                                    span: 9..10,
                                    name: Ident {
                                        loc: SourceLocation {
                                            start: Position {
                                                line: 0,
                                                column: 9,
                                            },
                                            end: Position {
                                                line: 0,
                                                column: 10,
                                            },
                                        },
                                        span: 9..10,
                                        name: "T",
                                    },
                                    constraint: None,
                                    default: None,
                                },
                            ],
                        ),
                    },
                ),
            },
        ],
    },
)
